# patoka

./: .gitignore  MANIFEST.in  README.md  index.js  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  svelte.config.js  vite.config.js
.github/workflows/: deploy.yml  pb.yml
demos/: demo-circuit-viewer.ipynb  demo-circuit-writer.ipynb  demo-job-sharing.ipynb  demo-machine-explorer.ipynb  demo-qaoa.ipynb  demo-toffoli-optimization.ipynb  qaoa_job_data.json
dev_note/: structure.md
src/: app.html
src/lib/: model.js
src/lib/monaco/: monaco-python.js  monacoEditor.svelte
src/patoka/: __init__.py  backend_design.py  backend_prep.py  circuit_data_prep.py  draw_uncertainty.py  esp.py  get_fake_backend.py  image_convolution_utils.py  job_output_data.py  machine_data_prep.py  match_circuit.py  process_job_data.py  process_pulse_data.py  qiskit_draw_utils.py  retrieve_job_data.py  shors_utils.py  transpile_params.py  widget_classes.py  widgets.py  widgets_dev.py
src/patoka/widget_built/: index.js  style.css
src/routes/: +layout.svelte  +page.svelte  style.css
src/routes/docs/: +page.svelte  ClassElem.svelte  CodeExample.svelte  Function.svelte  docs_data.js
src/routes/previews/: +page.svelte
widget_dist/: index.js  style.css
widget_src/CircuitViewer/: Circuit.svelte  CircuitViewer.svelte  Information.svelte  QubitInfo.svelte  TranspileDataView.svelte  TranspileSummary.svelte  schedule_pulse_data.js
widget_src/CircuitViewer/InfoWidgets/: ESPInfo.svelte  GateErrorInfo.svelte  GateInfo.svelte  QasmInfo.svelte  QubitGateInfo.svelte
widget_src/CircuitViewer/svg_utils/: draw_mini_pulse_view.js  draw_pulse_data.js  parameter.js  plan_gate.js  util.js
widget_src/CircuitViewer/svgs/: Line.svelte  Path.svelte  SVGWrap.svelte  X.svelte
widget_src/CircuitWriter/: CircuitWriter.svelte  GlobalEntry.svelte  MachineSection.svelte  MeasureSection.svelte  ObservableSection.svelte  OperationsSection.svelte  ParamEntry.svelte  QubitSelect.svelte  machines.js
widget_src/MachineViewer/: CircuitViewPanel.svelte  CodeConfigure.svelte  MachineViewer.svelte  NudvMapPanel.svelte  QubitEdge.svelte  QubitListPanel.svelte  QubitNode.svelte  Subsection.svelte  meta_info.js  util.js
widget_src/MachineViewer/TimeMachineModal/: InTableBar.svelte  TimeMachineGates.svelte  TimeMachineNUDV.svelte
widget_src/ResultViewer/: ResultViewer.svelte  draw_count_histogram.js  util.js
widget_src/ResultViewer/panels/: BackendPanel.svelte  CircuitPanel.svelte  FaultyPanel.svelte  MachinePanel.svelte  NaturalNumberView.svelte  PivotTableView.svelte  (+1 more)
(+137 files in other folders)
