[build-system]
requires = ["setuptools", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "patoka"
version = "0.2.12"
authors = [
  { name="Hyeok Kim" },
  { name="Mingyoung J. Jeng" },
  { name="Kaitlin N. Smith" },
]
description = "A collection of Jupyter Lab widgets for IBM Qiskit"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "qiskit>=1.3",
    "qiskit-aer>=0.16",
    "qiskit_ibm_runtime>=0.34",
    "qiskit_algorithms>=0.3",
    "qiskit_machine_learning>=0.8",
    "numpy>=2.0",
    "pandas>=2.2",
    "altair>=5.5",
    "scipy>=1.13",
    "tqdm>=4.67",
    "jupyter>=1.1",
    "anywidget>=0.9",
    "matplotlib>=3.9"
]

[project.urls]
Homepage = "https://github.com/see-mike-out/patoka"
Issues = "https://github.com/see-mike-out/patoka/issues"